fixed layout issue where long pages were hiding behing the footer

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -97,6 +97,7 @@ p {
   height: 100%;
   padding: 200px 0;
   margin-top: -30px;
+  margin-bottom: -50px;
   text-align: center;
   color: #fff;
   background:url(space.jpg) no-repeat bottom center scroll;
